test/parser/bad/unterminated_macro_def.ulm
.macro MY_NOP
    add r0 r0 r0

.text
main:
    MY_NOP
    